# skerna-template

./: .gitignore  .pylintrc  README.md  buildspec.yml  package.json  project.json  pyproject.toml  requirements.txt  requirements_aws.txt
.devcontainer/: devcontainer.json
tests/: conftest.py
tests/fixtures/: __init__.py  fixture_sample.py
tests/test_utils/: test_sample.py
